update janus endpoint
